fix: cambiar propiedad word-wrap en el titulo para que el sitio escale bien en móvil (#26)

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -2,10 +2,12 @@
   h1 {
     font-size: 50px;
     letter-spacing: 8px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
   }
+
   p {
     color: white;
-    // font-weight: 400;
   }
 }
 
